# sparv-retreat2024-plugin

./: README.md  pyproject.toml
sbx_retreat2024_plugin/: __init__.py
sbx_retreat2024_plugin/sbx_noun_count/: noun_count.py
sbx_retreat2024_plugin/sbx_table_export/: table_export.py
sbx_retreat2024_plugin/sbx_uppercase/: uppercase.py
sbx_uppercase/: uppercase.py
